--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,16 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.parent {}
+
+.children {
+  top: 0;
+  left: 0;
 }
